tests/specs/ecosystem/rehype_pretty/transformers/0_1_1.test
rehype-pretty/transformers/0.1.1
-- deno.lock --
{}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2307 [ERROR]: Cannot find module 'file://<tmpdir>/src/shiki'.
    at file://<tmpdir>/src/copy-button.ts:1:39

